--- a/style.css
+++ b/style.css
@@ -9,6 +9,14 @@ body {
     position: relative;
     background-color: rgb(10, 10, 12);
 }
+.background-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 .accorcheAccueil {
     display: flex;
     flex-direction: column;
